--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         </div>
       </div>
       <div class="footer__copy">
+        <!-- Added some comments here  -->
         <p>© 2023 All Rights Reserved. Design by <span>Mahedi</span></p>
       </div>
     </footer>
